tests/purs/failing/DeprecatedFFIPrime.purs
-- @shouldFailWith DeprecatedFFIPrime
-- @shouldFailWith DeprecatedFFIPrime
-- @shouldFailWith DeprecatedFFIPrime
-- @shouldFailWith DeprecatedFFIPrime
module Main where

foreign import a' :: Number
foreign import b' :: Number
foreign import c' :: Number
foreign import d' :: Number
