tests/purs/failing/DeprecatedFFIPrime.out
Error 1 of 4:

  at tests/purs/failing/DeprecatedFFIPrime.purs:5:1 - 10:28 (line 5, column 1 - line 10, column 28)

    In the FFI module for [33mMain[0m:

      The identifier [33ma'[0m contains a prime ([33m'[0m).
      Primes are not allowed in identifiers exported from FFI modules.



  See https://github.com/purescript/documentation/blob/master/errors/DeprecatedFFIPrime.md for more information,
  or to contribute content related to this error.

Error 2 of 4:

  at tests/purs/failing/DeprecatedFFIPrime.purs:5:1 - 10:28 (line 5, column 1 - line 10, column 28)

    In the FFI module for [33mMain[0m:

      The identifier [33mb'[0m contains a prime ([33m'[0m).
      Primes are not allowed in identifiers exported from FFI modules.



  See https://github.com/purescript/documentation/blob/master/errors/DeprecatedFFIPrime.md for more information,
  or to contribute content related to this error.

Error 3 of 4:

  at tests/purs/failing/DeprecatedFFIPrime.purs:5:1 - 10:28 (line 5, column 1 - line 10, column 28)

    In the FFI module for [33mMain[0m:

      The identifier [33mc'[0m contains a prime ([33m'[0m).
      Primes are not allowed in identifiers exported from FFI modules.



  See https://github.com/purescript/documentation/blob/master/errors/DeprecatedFFIPrime.md for more information,
  or to contribute content related to this error.

Error 4 of 4:

  at tests/purs/failing/DeprecatedFFIPrime.purs:5:1 - 10:28 (line 5, column 1 - line 10, column 28)

    In the FFI module for [33mMain[0m:

      The identifier [33md'[0m contains a prime ([33m'[0m).
      Primes are not allowed in identifiers exported from FFI modules.



  See https://github.com/purescript/documentation/blob/master/errors/DeprecatedFFIPrime.md for more information,
  or to contribute content related to this error.

